[package]
name = "hedera"
publish = false
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
hedera = { git = "https://github.com/hashgraph/hedera-sdk-rust", rev = "63733a11f989fab8805dd9e7ebe7d94d398cc118" }
libc = { version = "0.2.44" }
slotmap = { version = "0.3.0", features = [ "unstable" ] }
once_cell = "0.1.6"
failure = "0.1.3"
parking_lot = { version = "0.7.0", features = [ "nightly" ] }
chrono = "0.4.6"
mbox = "0.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
