[package]
name = "hedera"
publish = false
version = "0.1.0-alpha.0"
description = "Hedera SDK for C (base SDK for all non-Java Hedera SDKs)"
license = "Apache-2.0"
repository = "https://github.com/launchbadge/hedera-sdk-c"
edition = "2018"
keywords = ["hedera", "sdk", "rust"]
authors = [
    "LaunchBadge <contact@launchbadge.com> (PRIMARY)",
    "Lonestar Data Technologies <sam@lonestardata.io>"
]

[dependencies]
hedera = { git = "https://github.com/sam-ulrich1/hedera-sdk-rust" }
libc = { version = "0.2.44" }
slotmap = { version = "0.3.0", features = [ "unstable" ] }
once_cell = "0.1.6"
failure = "0.1.3"
parking_lot = { version = "0.7.0", features = [ "nightly" ] }
chrono = "0.4.6"
mbox = "0.5.0"
paste = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false

[profile.dev]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
debug-assertions = true
